class_name VRRampPropertiesIII
extends Control


@onready var theta_3_label : Label = $VBoxContainer/R3ThetaLabel
@onready var beta_3_label : Label = $VBoxContainer/R3BetaLabel
@onready var mach_number_label : Label = $VBoxContainer/R3MachLabel
@onready var temperature_label : Label = $VBoxContainer/R3TempLabel
@onready var pressure_label : Label = $VBoxContainer/R3PresLabel
@onready var density_label : Label = $VBoxContainer/R3DensLabel
@onready var stag_temp_label : Label = $VBoxContainer/R3StagTempLabel
@onready var stag_press_label : Label = $VBoxContainer/R3StagPresLabel
@onready var flow_velocity_label : Label = $VBoxContainer/R3FlowVelLabel
